# codex

./: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  announcement_tip.toml  deploy.sh  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
.github/scripts/: verify_cargo_workspace_manifests.py
.github/workflows/: README.md  bazel.yml  ci.yml  rust-ci-full.yml  rust-ci.yml  rust-release.yml
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py
codex-rs/: Cargo.toml  README.md  config.md
codex-rs/.cargo/: config.toml
codex-rs/.config/: nextest.toml
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: client_tests.rs  lib.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-test-client/: Cargo.toml
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  config_manager.rs  config_manager_service_tests.rs  extensions.rs  feedback_stub.rs  in_process.rs  lib.rs  message_processor.rs  message_processor_tracing_tests.rs  outgoing_message.rs  request_processors.rs
codex-rs/apply-patch/src/: lib.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  main.rs  mcp_cmd.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/codex-api/tests/: models_integration.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: elicitation.rs  (+4 more)
codex-rs/config/: Cargo.toml
codex-rs/core/: Cargo.toml  README.md  config.schema.json
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-skills/: Cargo.toml
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/: Cargo.toml
codex-rs/features/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/hooks/: Cargo.toml
codex-rs/hostrun/: Cargo.toml  DESIGN.md  JUST_BASH_SPIKE.md  README.md
codex-rs/hostrun-adapter/: Cargo.toml
codex-rs/hostrun-adapter/src/: lib.rs  tool_bundle.rs  tool_contributor.rs
codex-rs/hostrun/js/: README.md  package.json  tsconfig.json
codex-rs/hostrun/js/src/: cli.ts  hostrun-e2e.test.ts  hostrun-session.test.ts  hostrun-session.ts  index.ts  node-globals.d.ts  runner.test.ts  runner.ts
codex-rs/hostrun/src/: bootstrap.js  byte_tests.rs  cli_approval.rs  cli_execution.rs  cli_graph.rs  cli_payload.rs  cli_stream.rs  cli_wrapper_tests.rs  collection_tests.rs  command_execution_tests.rs  cwd_tests.rs  date_tests.rs  eval_tool.rs  execution_context.rs  fs_capability.rs  fs_execution_tests.rs  git_commit_tests.rs  github_pr_tests.rs  http_capability.rs  http_execution_tests.rs  lib.rs  mcp_server.rs  output_intent.rs  path_tests.rs  process_registry.rs  projection_tests.rs  rg_execution_tests.rs  session.rs  session_tests.rs  spawn_tests.rs  structured_data_tests.rs  structured_write_tests.rs  table_error_tests.rs  text_tests.rs  tmp_capability.rs  tmp_tests.rs  tool_bundle.rs  tool_contributor.rs
codex-rs/login/: Cargo.toml
codex-rs/model-provider/: Cargo.toml
codex-rs/models-manager/: Cargo.toml  models.json
codex-rs/otel/: Cargo.toml
codex-rs/otel/src/: lib.rs
codex-rs/otel/src/traces/: otel_manager.rs
codex-rs/protocol/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/rollout-trace/: Cargo.toml
codex-rs/shell-command/: Cargo.toml
codex-rs/tools/: README.md
codex-rs/tui/: Cargo.toml  prompt_for_spec_validation_command.md  tooltips.txt
codex-rs/windows-sandbox/: Cargo.toml
docs/: config.md  gpt-5.4-underperformance-fix.md  install.md  osso_fork.md
docs/specs/: app-server-robustness.md  apply-patch-claude-translation.md  approval-system.md  deploy-and-branding.md  hostrun.md  model-prompt-hygiene.md  multi-agent-v2.md  permission-prompt-tool.md  pre-tool-use-rewrites.md  prompt-context-hooks.md  resume-picker-sqlite.md  run-plan-command.md  session-end-transcript-parser.md  skip-pwd-shell-env.md  stop-session-start-hook-plumbing.md  subagent-communication.md  tui-customization.md  unified-exec-shell-tool.md  upstream-removals.md  user-rules-loader.md  worktree-startup-option.md
patches/: rules_rust_windows_exec_bin_target.patch
sdk/python/: README.md  pyproject.toml
sdk/typescript/: package.json
shell-tool-mcp/: package.json
(+568 files in other folders)
