[package]
edition.workspace = true
license.workspace = true
name = "codex-analytics"
version.workspace = true

[lib]
doctest = false
name = "codex_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-login = { workspace = true }
codex-plugin = { workspace = true }
codex-protocol = { workspace = true }
