[package]
name = "codex-hostrun-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-tool-api = { workspace = true }
hostrun = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false

[lints]
workspace = true
