[package]
name = "codex-hostrun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-tool-api = { workspace = true }
rquickjs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lib]
doctest = false

[lints]
workspace = true
