[package]
name = "codex-hostrun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-extension-api = { workspace = true }
codex-tool-api = { workspace = true }
rquickjs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
rmcp = { workspace = true, default-features = false, features = ["server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
doctest = false

[[bin]]
name = "codex-hostrun-mcp"
path = "src/bin/mcp.rs"

[lints]
workspace = true
