[package]
name = "codex-hostrun"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stateful QuickJS host-automation runtime with a stdio MCP server."
readme = "README.md"

[dependencies]
rquickjs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
rmcp = { workspace = true, default-features = false, features = ["server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
doctest = false

[[bin]]
name = "hostrun-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "codex-hostrun-mcp"
path = "src/bin/codex_hostrun_mcp.rs"

[lints]
workspace = true
