[package]
edition.workspace = true
license.workspace = true
name = "codex-otel"
version.workspace = true

[lib]
doctest = false
name = "codex_otel"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-string = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
